<resources>
    <string name="app_name">Pupils Facebook</string>
    <string name="home">Home</string>
    <string name="addPost">Add post</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="magnifier">Magnifier</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="welcome">Welcome to Pupil\'s Facebook</string>
    <string name="keepConnected">Keep connected with friends</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="noAccount">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="haveAccount">Already have an account ?</string>
    <string name="userName">User Name</string>
    <string name="emailNot">Email Not Verified !</string>
    <string name="verify">Verify</string>
    <string name="gotoLogin">Go to Login Page</string>
    <string name="verifyProblem">If you verified email, try logging in again</string>
    <string name="gotoRegister">Go to Register Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>